some changes 9: docker-compose initial data issue fixed